# clenzy

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  TODO.md  justfile  rustc-ice-2025-07-27T19_11_40-49841.txt  rustc-ice-2025-07-27T20_48_25-56365.txt  todo.md
.github/ISSUE_TEMPLATE/: bug_report.md
snippets/: betterfox_user_config  default_firefox_skip  disabled_features  firefox_user_js_extra  firefox_user_js_vert_tabs  remove_enabled_features
snippets/brave/: disabled_prefetch_features  policies.json  remove_lab_experiments_features  remove_prefetch_features
snippets/firefox/: extra  extra.js
snippets/firefox_common/: betterfox_extra  search_suggestions
src/: archive.rs  brave.rs  browser.rs  browsers.rs  firefox.rs  firefox_common.rs  installation.rs  logging.rs  main.rs  util.rs  zen.rs
src/brave/: chrome_feature_state.rs  installations.rs  local_state.rs  mod.rs  paths.rs  policies.rs  preferences.rs  profiles.rs  resources.rs
src/browser/: installation.rs  mod.rs  profile.rs
src/engines/: firefox_like.rs  mod.rs
src/firefox/: installations.rs  mod.rs  paths.rs  policies.rs  resource.rs  xulstore.rs
src/firefox/common/: backup.rs  mod.rs  profiles.rs  user_js.rs
src/firefox_common/: backup.rs  mod.rs  profiles.rs  user_js.rs
src/util/: archive.rs  logging.rs  mod.rs
src/zen/: installations.rs  mod.rs  paths.rs  resource.rs
