[package]
name = "browser-debloat"
edition = "2024"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.4"
dirs = "6.0.0"
indicatif = "0.17.11"
inquire = "0.7.5"
rust-ini = "0.21.1"
serde = { version = "1.0.219" }
serde_json = "1.0.140"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ureq = "3.0.11"
zip = { version = "2.6.1", default-features = false, features = ["deflate-flate2", "deflate"] }
sysinfo = { version = "0.35.0" }
clap = { version = "4.5.37", features = ["derive"] }
